remove all truncated and full passive, add tuto notebook

--- a/notebook/draft.ipynb
+++ b/notebook/draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "sys.path.insert(0,\"./..\")\n",
     "from src.PassivePySrcFR.PassivePy import PassivePyAnalyzer\n",
     "from src import analysis_passive\n",
-    "from annotated_text import annotated_text\n",
+    "\n",
     "analyzer = PassivePyAnalyzer(spacy_model= \"fr_core_news_lg\")"
    ]
   },
@@ -126,117 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<span class=\"tex2jax_ignore\"><div class=\"spans\" style=\"line-height: 2.5; direction: ltr\">J' ai \n",
-       "<span style=\"font-weight: bold; display: inline-block; position: relative; height: 77px;\">\n",
-       "    été\n",
-       "    \n",
-       "<span style=\"background: #ddd; top: 40px; height: 4px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "</span>\n",
-       "\n",
-       "<span style=\"background: #ddd; top: 57px; height: 4px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "</span>\n",
-       "\n",
-       "    \n",
-       "<span style=\"background: #ddd; top: 40px; height: 4px; border-top-left-radius: 3px; border-bottom-left-radius: 3px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "    <span style=\"background: #ddd; z-index: 10; color: #000; top: -0.5em; padding: 2px 3px; position: absolute; font-size: 0.6em; font-weight: bold; line-height: 1; border-radius: 3px\">\n",
-       "        passif_canonique\n",
-       "    </span>\n",
-       "</span>\n",
-       "\n",
-       "\n",
-       "<span style=\"background: #ddd; top: 57px; height: 4px; border-top-left-radius: 3px; border-bottom-left-radius: 3px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "    <span style=\"background: #ddd; z-index: 10; color: #000; top: -0.5em; padding: 2px 3px; position: absolute; font-size: 0.6em; font-weight: bold; line-height: 1; border-radius: 3px\">\n",
-       "        passif_tronqué\n",
-       "    </span>\n",
-       "</span>\n",
-       "\n",
-       "\n",
-       "</span>\n",
-       "\n",
-       "<span style=\"font-weight: bold; display: inline-block; position: relative; height: 94px;\">\n",
-       "    attaqué\n",
-       "    \n",
-       "<span style=\"background: #ddd; top: 40px; height: 4px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "</span>\n",
-       "\n",
-       "<span style=\"background: #ddd; top: 57px; height: 4px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "</span>\n",
-       "\n",
-       "<span style=\"background: #ddd; top: 74px; height: 4px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "</span>\n",
-       "\n",
-       "    \n",
-       "<span style=\"background: #ddd; top: 74px; height: 4px; border-top-left-radius: 3px; border-bottom-left-radius: 3px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "    <span style=\"background: #ddd; z-index: 10; color: #000; top: -0.5em; padding: 2px 3px; position: absolute; font-size: 0.6em; font-weight: bold; line-height: 1; border-radius: 3px\">\n",
-       "        passif_impersonel\n",
-       "    </span>\n",
-       "</span>\n",
-       "\n",
-       "\n",
-       "</span>\n",
-       "\n",
-       "<span style=\"font-weight: bold; display: inline-block; position: relative; height: 77px;\">\n",
-       "    par\n",
-       "    \n",
-       "<span style=\"background: #ddd; top: 40px; height: 4px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "</span>\n",
-       "\n",
-       "<span style=\"background: #ddd; top: 74px; height: 4px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "</span>\n",
-       "\n",
-       "    \n",
-       "</span>\n",
-       "\n",
-       "<span style=\"font-weight: bold; display: inline-block; position: relative; height: 60px;\">\n",
-       "    des\n",
-       "    \n",
-       "<span style=\"background: #ddd; top: 74px; height: 4px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "</span>\n",
-       "\n",
-       "    \n",
-       "</span>\n",
-       "\n",
-       "<span style=\"font-weight: bold; display: inline-block; position: relative; height: 60px;\">\n",
-       "    loups\n",
-       "    \n",
-       "<span style=\"background: #ddd; top: 74px; height: 4px; left: -1px; width: calc(100% + 2px); position: absolute;\">\n",
-       "</span>\n",
-       "\n",
-       "    \n",
-       "</span>\n",
-       "! </div></span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'replace'",
+     "ename": "NameError",
+     "evalue": "name 'analyzer' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mspacy_streamlit\u001b[39;00m \u001b[39mimport\u001b[39;00m visualize_spans\n\u001b[0;32m----> 3\u001b[0m visualize_spans(doc, spans_key\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mpassive\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39m#displacy_options={\"colors\": color_dict})\u001b[39;00m\n",
-      "File \u001b[0;32m~/env/app_passive/lib/python3.8/site-packages/spacy_streamlit/visualizer.py:326\u001b[0m, in \u001b[0;36mvisualize_spans\u001b[0;34m(doc, spans_key, attrs, show_table, title, manual, displacy_options)\u001b[0m\n\u001b[1;32m    317\u001b[0m         st\u001b[39m.\u001b[39mwarning(\n\u001b[1;32m    318\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mWhen the parameter \u001b[39m\u001b[39m'\u001b[39m\u001b[39mmanual\u001b[39m\u001b[39m'\u001b[39m\u001b[39m is set to True, the parameter \u001b[39m\u001b[39m'\u001b[39m\u001b[39mdoc\u001b[39m\u001b[39m'\u001b[39m\u001b[39m must be of type \u001b[39m\u001b[39m'\u001b[39m\u001b[39mDict\u001b[39m\u001b[39m'\u001b[39m\u001b[39m, not \u001b[39m\u001b[39m'\u001b[39m\u001b[39mspacy.tokens.Doc\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    319\u001b[0m         )\n\u001b[1;32m    320\u001b[0m html \u001b[39m=\u001b[39m displacy\u001b[39m.\u001b[39mrender(\n\u001b[1;32m    321\u001b[0m     doc,\n\u001b[1;32m    322\u001b[0m     style\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mspan\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    323\u001b[0m     options\u001b[39m=\u001b[39mdisplacy_options,\n\u001b[1;32m    324\u001b[0m     manual\u001b[39m=\u001b[39mmanual,\n\u001b[1;32m    325\u001b[0m )\n\u001b[0;32m--> 326\u001b[0m st\u001b[39m.\u001b[39mwrite(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mget_html(html)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m, unsafe_allow_html\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m    328\u001b[0m \u001b[39mif\u001b[39;00m show_table:\n\u001b[1;32m    329\u001b[0m     data \u001b[39m=\u001b[39m [\n\u001b[1;32m    330\u001b[0m         [\u001b[39mstr\u001b[39m(\u001b[39mgetattr\u001b[39m(span, attr)) \u001b[39mfor\u001b[39;00m attr \u001b[39min\u001b[39;00m attrs]\n\u001b[1;32m    331\u001b[0m         \u001b[39mfor\u001b[39;00m span \u001b[39min\u001b[39;00m doc\u001b[39m.\u001b[39mspans[spans_key]\n\u001b[1;32m    332\u001b[0m     ]\n",
-      "File \u001b[0;32m~/env/app_passive/lib/python3.8/site-packages/spacy_streamlit/util.py:30\u001b[0m, in \u001b[0;36mget_html\u001b[0;34m(html)\u001b[0m\n\u001b[1;32m     28\u001b[0m WRAPPER \u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\u001b[39m<div style=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39moverflow-x: auto; border: 1px solid #e6e9ef; border-radius: 0.25rem; padding: 1rem; margin-bottom: 2.5rem\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m>\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m</div>\u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m     29\u001b[0m \u001b[39m# Newlines seem to mess with the rendering\u001b[39;00m\n\u001b[0;32m---> 30\u001b[0m html \u001b[39m=\u001b[39m html\u001b[39m.\u001b[39;49mreplace(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     31\u001b[0m \u001b[39mreturn\u001b[39;00m WRAPPER\u001b[39m.\u001b[39mformat(html)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'replace'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mspacy_streamlit\u001b[39;00m \u001b[39mimport\u001b[39;00m visualize_spans\n\u001b[0;32m----> 2\u001b[0m matches, doc \u001b[39m=\u001b[39m analyzer\u001b[39m.\u001b[39mprepare_visualisation(text)\n\u001b[1;32m      3\u001b[0m visualize_spans(doc, spans_key\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpassive\u001b[39m\u001b[39m\"\u001b[39m, show_table \u001b[39m=\u001b[39m  \u001b[39mFalse\u001b[39;00m, title \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'analyzer' is not defined"
      ]
     }
    ],
    "source": [
     "from spacy_streamlit import visualize_spans\n",
-    "\n",
-    "visualize_spans(doc, spans_key=\"passive\",displacy_options={\"colors\": color_dict})"
+    "matches, doc = analyzer.prepare_visualisation(text)\n",
+    "visualize_spans(doc, spans_key=\"passive\", show_table =  False, title = \"\")"
    ]
   },
   {
