add a notebook example

--- a/notebook/draft.ipynb
+++ b/notebook/draft.ipynb
@@ -2,17 +2,207 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sys\n",
     "sys.path.insert(0,\"./..\")\n",
-    "from src.PassivePySrcFR.PassivePy import PassivePyAnalyzer\n",
+    "from src.PassivePy import PassivePyAnalyzer\n",
     "from src import analysis_passive\n",
     "\n",
-    "analyzer = PassivePyAnalyzer(spacy_model= \"fr_core_news_lg\")"
+    "#analyzer = PassivePyAnalyzer(spacy_model= \"fr_core_news_lg\")\n",
+    "\n",
+    "\n",
+    "import spacy\n",
+    "from spacy.matcher import Matcher\n",
+    "nlp = spacy.load(\"fr_core_news_lg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/home/robin/Code_repo/app_passive_detection/data/intransif_verbs.txt') as f : \n",
+    "   lines =  f.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [elt.replace(\"\\n\",\"\").lower().strip() for elt in  open('/home/robin/Code_repo/app_passive_detection/data/intransif_verbs.txt').readlines()[1:]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2299"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/robin/env/app_passive/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy_stanza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-07 10:10:53.525 INFO    stanza: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n",
+      "Downloading https://raw.githubusercontent.com/stanfordnlp/stanza-resources/main/resources_1.4.1.json: 193kB [00:00, 6.90MB/s]                    \n",
+      "2022-12-07 10:10:55.896 INFO    stanza: Loading these models for language: fr (French):\n",
+      "=======================\n",
+      "| Processor | Package |\n",
+      "-----------------------\n",
+      "| tokenize  | gsd     |\n",
+      "| mwt       | gsd     |\n",
+      "| pos       | gsd     |\n",
+      "| lemma     | gsd     |\n",
+      "| depparse  | gsd     |\n",
+      "| ner       | wikiner |\n",
+      "=======================\n",
+      "\n",
+      "2022-12-07 10:10:55.898 INFO    stanza: Use device: gpu\n",
+      "2022-12-07 10:10:55.899 INFO    stanza: Loading: tokenize\n",
+      "2022-12-07 10:10:55.915 INFO    stanza: Loading: mwt\n",
+      "2022-12-07 10:10:55.923 INFO    stanza: Loading: pos\n",
+      "2022-12-07 10:10:56.363 INFO    stanza: Loading: lemma\n",
+      "2022-12-07 10:10:56.427 INFO    stanza: Loading: depparse\n",
+      "2022-12-07 10:10:56.734 INFO    stanza: Loading: ner\n",
+      "2022-12-07 10:10:58.495 INFO    stanza: Done loading processors!\n"
+     ]
+    }
+   ],
+   "source": [
+    "nlp = spacy_stanza.load_pipeline(\"fr\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/robin/env/app_passive/lib/python3.8/site-packages/spacy/language.py:1014: UserWarning: Due to multiword token expansion or an alignment issue, the original text has been replaced by space-separated expanded tokens.\n",
+      "  doc = self._ensure_doc(text)\n",
+      "/home/robin/env/app_passive/lib/python3.8/site-packages/spacy/language.py:1014: UserWarning: Can't set named entities because of multi-word token expansion or because the character offsets don't map to valid tokens produced by the Stanza tokenizer:\n",
+      "Words: ['Spiderman', 'a', 'été', 'vu', 'à', 'le', 'cinéma', '.', 'La', 'pomme', 'a', 'été', 'posée', 'sur', 'la', 'table', '!', \"J'\", 'ai', 'fais', 'à', 'manger', 'des', 'pattes', 'à', 'mes', 'amis', '.']\n",
+      "Entities: [('Spiderman', 'MISC', 0, 9), ('La pomme', 'MISC', 30, 38)]\n",
+      "  doc = self._ensure_doc(text)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[vu, posée, fais, manger]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc  = nlp(\"Spiderman a été vu au cinéma. La pomme a été posée sur la table ! J'ai fais à manger des pattes à mes amis.\")\n",
+    "totalVerbs = [token for token in doc if (token.pos_ == \"VERB\")]\n",
+    "totalVerbs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vu\n",
+      "nsubj:pass\n",
+      "aux:tense\n",
+      "aux:pass\n",
+      "obl:arg\n",
+      "punct\n",
+      "posée\n",
+      "nsubj:pass\n",
+      "aux:tense\n",
+      "aux:pass\n",
+      "obl:mod\n",
+      "punct\n",
+      "fais\n",
+      "nsubj\n",
+      "aux:tense\n",
+      "xcomp\n",
+      "punct\n",
+      "manger\n",
+      "mark\n",
+      "obj\n",
+      "obl:mod\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for verb in totalVerbs:\n",
+    "    # direct object check\n",
+    "    directObject = False\n",
+    "    # indirect object check\n",
+    "    indirectObject = False\n",
+    "    \n",
+    "    \n",
+    "    print(verb)\n",
+    "    # looks through each verb's child ie dependents\n",
+    "    for item in verb.children:\n",
+    "    \n",
+    "        print(item.dep_)\n",
+    "        # sets indirectObject to true if indirect object is found\n",
+    "        if(item.dep_ == \"iobj\" or item.dep_ == \"pobj\"):\n",
+    "            indirectObject = True\n",
+    "        # sets directObject to true if direct object is found\n",
+    "        if (item.dep_ == \"dobj\" or item.dep_ == \"dative\"):\n",
+    "            directObject = True\n",
+    "            "
    ]
   },
   {
