--- a/notebook/tuto-exemple.ipynb
+++ b/notebook/tuto-exemple.ipynb
@@ -16,7 +16,7 @@
     "import pandas as pd\n",
     "import sys\n",
     "sys.path.insert(0,\"./..\")\n",
-    "from src.PassivePySrcFR.PassivePy import PassivePyAnalyzer\n",
+    "from src.PassivePy import PassivePyAnalyzer\n",
     "from src import analysis_passive\n"
    ]
   },
