--- a/notebook/draft.ipynb
+++ b/notebook/draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,87 @@
     "\n",
     "import spacy\n",
     "from spacy.matcher import Matcher\n",
-    "#nlp = spacy.load(\"fr_core_news_lg\")"
+    "nlp = spacy.load(\"fr_core_news_lg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intransitif_verbs_list = [elt.replace(\"\\n\",\"\").lower().strip() for elt in  open('../data/intransif_verbs.txt', encoding=\"utf8\").readlines()[1:]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matcher = Matcher(nlp.vocab)\n",
+    "passive_rule_1 = [\n",
+    "        {\"POS\":\"AUX\", \"DEP\": \"aux\", \"OP\":\"*\"},\n",
+    "        {\"DEP\":{\"IN\" : [\"iobj\",\"expl:comp\"]}, \"TAG\":\"PRON\",\"MORPH\": {\"IS_SUPERSET\": [\"Reflex=Yes\"]}, \"OP\": \"!\"}, # absence de pronom réfléxif \n",
+    "        {\"POS\":{\"IN\" : [\"AUX\",\"VERB\"]}, \"DEP\": \"aux:pass\", \"OP\":\"+\"},\n",
+    "        {\"DEP\":\"neg\", \"TAG\":\"ADV\",\"MORPH\": {\"IS_SUPERSET\": [\"Degree=Pos\"]}, \"OP\":\"*\"},\n",
+    "        {\"DEP\":\"HYPH\", \"OP\":\"*\"},\n",
+    "        {\"DEP\":\"advmod\", \"TAG\":\"ADV\",\"MORPH\": {\"IS_SUPERSET\": [\"Degree=Pos\"]}, \"OP\":\"*\"},\n",
+    "        {\"POS\":{\"IN\" : [\"ADP\",\"DET\"]},\"OP\":\"*\"},\n",
+    "        {\"TAG\":\"ADV\",\"OP\":\"+\"},\n",
+    "        {\"POS\":\"VERB\",\"MORPH\": {\"IS_SUPERSET\": [\"Tense=Past\",\"VerbForm=Part\"]},\"LEMMA\":{\"NOT_IN\" : ['test'] }}\n",
+    "    ]\n",
+    "matcher.add(\"passif_tronqué\", [passive_rule_1], greedy='LONGEST')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9193871772638941817, 0, 4)]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example = \"j'étais vraiment perturbé\"\n",
+    "matcher(nlp(example))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "annotation = pd.read_json(\"/home/robin/Data/Etude_1000/annotation/20221208_voix_passive.jsonl\", lines =True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "372977"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotation['text'].apply(lambda x : len(x.replace(\"  \",\" \").split(\" \"))).sum()"
    ]
   },
   {
